更改主页磁贴

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                                         <a id="link-url-2" href="https://rakko.vladilena.cn/" target="_blank">
                                             <div class="link-card cards">
                                                 <i id="link-icon-2" class="fa-solid fa-cloud"></i>
-                                                <span class="link-name" id="link-name-2">NetPan</span>
+                                                <span class="link-name" id="link-name-2">Cloud</span>
                                             </div>
                                         </a>
                                     </div>
