--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 }
             
                 function Search() {
-                    var url = 'https://bing.com/search?q=' + oInp.value;
+                    var url = 'http://www.baidu.com/s' + oInp.value;
                     window.open(url,'_self');
                 }
             </script>
@@ -303,10 +303,10 @@
                                 <!--第二组-->
                                 <div class="row" style="margin-top: 1.5rem;">
                                     <div class="col">
-                                        <a id="link-url-4" href="https://www.bing.com/" target="_blank">
+                                        <a id="link-url-4" href="https://www.baidu.com/" target="_blank">
                                             <div class="link-card cards">
                                                 <i id="link-icon-4" class="fa-solid fa-compass"></i>
-                                                <span class="link-name" id="link-name-4">Bing</span>
+                                                <span class="link-name" id="link-name-4">Baidu</span>
                                             </div>
                                         </a>
                                     </div>
