--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
                         <!--左侧内容-->
                         <div class="box-left">
                             <div class="img-title">
-                                <span class="img-title-big" id="logo-title-other">Yukinoshita</span>
+                                <span class="img-title-big" id="logo-title-other">Vladilena</span>
                                 <span class="img-text" id="logo-title-other-small">.cn</span><br />
                                 <span class="img-text">&nbsp;v&nbsp;1.1</span>
                                 <a href="https://github.com/FujiwaraChika0303" target="_blank">
