重构百度搜索

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 }
             
                 function Search() {
-                    var url = 'http://www.baidu.com/s' + oInp.value;
+                    var url = 'https://www.baidu.com/s?tn=28114124_2_dg&wd=' + oInp.value;
                     window.open(url,'_self');
                 }
             </script>
