--- a/404.html
+++ b/404.html
@@ -1,1 +1,1 @@
-<h5>Sorry, we couldn't find this page...Please confirm your insert is vladilena.cn to visit this page.</h5>
+<h5>Sorry, we couldn't find this page...Please confirm your insert is www.vladilena.cn to visit this page.</h5>
