--- a/index.html
+++ b/index.html
@@ -311,10 +311,10 @@
                                         </a>
                                     </div>
                                     <div class="col 2">
-                                        <a id="link-url-5" href="https://yukino.vladilena.cn/" target="_blank">
+                                        <a id="link-url-5" href="https://www.microsoft365.com/?auth=2&home=1" target="_blank">
                                             <div class="link-card cards">
                                                 <i id="link-icon-5" class="fa-solid fa-book-bookmark"></i>
-                                                <span class="link-name" id="link-name-5">MS_Copilot</span>
+                                                <span class="link-name" id="link-name-5">MS Office</span>
                                             </div>
                                         </a>
                                     </div>
