--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <div class="inner three"></div>
             </div>
             <div class="loading-word">
-                <p class="loading-title" id="loading-title">请稍后，这是您第一次访问，正在下载必要数据</p>
+                <p class="loading-title" id="loading-title">网站正在更新，这不会花太长时间</p>
                 <span id="loading-text">Loading......</span>
             </div>
         </div>
